0.4.10
- Code cleanup and refactoring (#665)
- Fix: Config check warning in mod1 in about any folder (#592)
- Fix: In mod2, lowercase POST (#597)
- Change: Move the "needs registration" checkbox from the date records to the topic records (#651)
- Fix: Problem with creation of new event records (#648)

0.4.9 (released 2007-03-06)
- Fix: Wrong reset of a field in TCE checking (#605)
- Change: Lower the TYPO3 version requirement to 3.7 (#631)
- Fix: Allow for searching also within organizer names (#352)
- Feature: Update statistics every time an event record gets saved (#242)
- Code cleanup and refactoring (#576, #570)
- Fix: In mod1, lowercase POST (#597)
- Fix: Configuration check on the wrong object in pi1::createRegistrationsList() (#584)
- Fix: Typo in pi1/locallang.xml (#583)
- Fix: Ordering of seminars doesn't work with MySQL Version 4.1.21 (#500)
- Fix: Crash of TYPO3 4.1 after setting plugin.tx_seminars.attendancesPID (#530)

0.4.8 (released 2007-01-19)
- Feature: Added some checking for the early bird prices and the deadline (#335)
- Fix: Deletion of content elements in front-end editing mode fails (#322)
- Fix: Localisation for early bird prices (#325)
- Fix: In the registration record BE editing, the drop-down field "payment methods" needs to have a blank (default) entry. (#397)
- Fix: Seminars with open end are displayed as being till 00:00h (#391)
- Feature: Configuration check for plugin.tx_seminars_pi1.listView (#333)
- Fix: uid and seats cannot be hidden using plugin.tx_seminars.hideFieldsInThankYouMail (#389)
- Fix: Typo in the configuration check (#387)
- Fix: Event still open for registration after registration deadline is over (#348)
- Fix: Configuration check warning with showFeUserFieldsInNotificationMail (#359)
- Code cleanup and refactoring (#351)
- Feature: Allow manual sorting of event records in the BE (#350)
- Fix: Make the DB selector boxes a bit higher (#369)